use-case-demos/multi-tenancy/policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNodeSelectorsEqualTo
metadata:
  name: secure-uc1-tenant-scheduling
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["mef-sog-uc1-wl"]
  parameters:
    nodeSelectors:
    - key: uc1-tenant
      value: "true"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNodeSelectorsEqualTo
metadata:
  name: secure-uc2-tenant-scheduling
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["uc2"]
  parameters:
    nodeSelectors:
    - key: uc2-tenant
      value: "true"
