use-case-demos/multi-tenancy/policy/test/pod-no-matching-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: mef-sog-uc1-wl
  labels:
    env: test
spec:
  nodeSelector:
    random_label: random_value
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
