use-case-demos/multi-tenancy/policy/test/pod-nonexistent-tenant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: nonexistent-tenant
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    nonexistent-tenant-tenant: "true"
