use-case-demos/multi-tenancy/policy/test/pod-with-correct-tenant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: mef-sog-uc1-wl
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    uc1-tenant: "true"
